--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -7,11 +7,13 @@
 
 {% block content %}
 
-<ol class="breadcrumb">
-  <li><a href="/">UrLab</a></li>
-  <li><a href="{% url "events_home" %}">Événements</a></li>
-  <li class="active">{{event.title}}</li>
-</ol>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">UrLab</a></li>
+    <li class="breadcrumb-item"><a href="/events/">Événements</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{event.title}}</li>
+  </ol>
+</nav>
 
 <div class="page-header">
   <h1 style=" word-wrap: break-word">
