--- a/wiki/templates/article_old_detail.html
+++ b/wiki/templates/article_old_detail.html
@@ -7,12 +7,13 @@
 {% endblock %}
 
 {% block content %}
-
+    <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li><a href="/">UrLab</a></li>
-      <li><a href="{% url "wiki_home" %}">wiki</a></li>
-      <li class="active">{{article.title}}</li>
+        <li class="breadcrumb-item"><a href="/">UrLab</a></li>
+        <li class="breadcrumb-item"><a href="{% url "wiki_home" %}">Wiki</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{article.title}}</li>
     </ol>
+    </nav>
 
     <ul class="nav nav-tabs" id="article-menu">
         <li class="pull-left">
