--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -1,56 +1,67 @@
 <div class="col-sm-6 col-md-3">
   <div class="card">
     <a href="{% url "view_project" project.id %}">
-    {% if not project.picture %}
-      <img class="card-img-top p-1" src="/static/img/default-project.png" style="height: 15em; width:100%; object-fit: cover;">
-    {% else %}
+      {% if not project.picture %}
+      <img class="card-img-top p-1" src="/static/img/default-project.png"
+        style="height: 15em; width:100%; object-fit: cover;">
+      {% else %}
       <img class="card-img-top p-1" src="{{project.picture.url}}" style="height: 15em; width:100%; object-fit: cover;">
-    {% endif %}
+      {% endif %}
     </a>
     <div class="card-body">
       <h3 class="card-title">
-          {{ project.title }}
+        {{ project.title }}
       </h3>
       <div class="row-fluid progress">
-          {% if project.status == 'i' %}
-              <div class="progress-bar" role="progressbar" aria-valuenow="{{project.progress}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:{{project.progress}}%">
-                  {{project.progress}}%
-              </div>
-          {% elif project.status == 'f' %}
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-                  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                  Fini
-              </div>
-          {% elif project.status == 'a' %}
-              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-                  {{project.ANT_CHAR}} Les fourmis sont parties
-              </div>
-          {% else %}
-              <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-                  Proposition
-              </div>
-          {% endif %}
+        {% if project.status == 'i' %}
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{project.progress}}" aria-valuemin="0"
+          aria-valuemax="100" style="min-width: 2em; width:{{project.progress}}%">
+          {{project.progress}}%
+        </div>
+        {% elif project.status == 'f' %}
+        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+          aria-valuemax="100" style="min-width: 2em; width:100%">
+          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z" />
+          </svg>
+          Fini
+        </div>
+        {% elif project.status == 'a' %}
+        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+          aria-valuemax="100" style="min-width: 2em; width:100%">
+          {{project.ANT_CHAR}} Les fourmis sont parties
+        </div>
+        {% else %}
+        <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0"
+          aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
+          Proposition
+        </div>
+        {% endif %}
       </div>
       <p class="row-fluid project-card-description">{{ project.short_description }}</p>
       <p class="row-fluid text-center">
-          <a href="{% url "view_project" project.id %}" class="btn btn-primary" role="button">
-              <i class="fa fa-eye" aria-hidden="true"></i>
-              Voir
-          </a>
-          {% if request.user != project.maintainer and request.user not in project.participants.all %}
-            <a href="{% url "project_add_participation" project.id %}" class="btn btn-outline-dark" role="button">
-                Participer
-            </a>
-          {% else %}
-            <a href="{% url "edit_project" project.id %}" class="btn btn-outline-dark" role="button">
-                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                  <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-                </svg>
-                Editer
-            </a>
-          {% endif %}
+        <a href="{% url "view_project" project.id %}" class="btn btn-primary" role="button">
+          <i class="fa fa-eye" aria-hidden="true"></i>
+          Voir
+        </a>
+        {% if request.user != project.maintainer and request.user not in project.participants.all %}
+        <a href="{% url "project_add_participation" project.id %}" class="btn btn-outline-dark" role="button">
+          Participer
+        </a>
+        {% else %}
+        <a href="{% url "edit_project" project.id %}" class="btn btn-outline-dark" role="button">
+          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+            <path fill-rule="evenodd"
+              d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+          </svg>
+          Editer
+        </a>
+        {% endif %}
       </p>
 
     </div>
