--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -76,7 +76,9 @@
     {% elif project.status == 'f' %}
         <div class="progress">
             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>  Fini
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"/>
+</svg>  Fini
           </div>
         </div>
     {% elif project.status == 'a' %}
