--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -83,7 +83,7 @@
         </div>
     {% elif project.status == 'a' %}
         <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
             {{project.ANT_CHAR}} Les fourmis sont parties
           </div>
         </div>
