--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -18,7 +18,7 @@
 <div class="page-header">
   <h1 style=" word-wrap: break-word">
     {{event.title}}
-    <a class="btn btn-default" href="{% url "edit_event" event.id %}">
+    <a class="btn btn-outline-dark" href="{% url "edit_event" event.id %}">
         <span class="fa fa-edit" aria-hidden="true"></span>
         Editer
     </a>
@@ -70,7 +70,7 @@
                 {% endwith %}
             </p>
             {% if request.user.is_authenticated and not event.meeting %}
-              <p>Cet événement n'a pas d'ordre du jour. <a href="{% url "add_meeting" event.id %}" class="btn btn-default btn-xs">Ajouter un OJ</a></p>
+              <p>Cet événement n'a pas d'ordre du jour. <a href="{% url "add_meeting" event.id %}" class="btn btn-outline-dark btn-xs">Ajouter un OJ</a></p>
             {% endif %}
         </div>
     </div>
@@ -102,7 +102,7 @@
       <h3>
         Ordre du jour
         {% if request.user.is_authenticated %}
-          <a class="btn btn-default btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
+          <a class="btn btn-outline-dark btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
               <span class="fa fa-edit" aria-hidden="true"></span>
               Editer
           </a>
@@ -123,7 +123,7 @@
       <h3>
         Compte rendu
         {% if request.user.is_authenticated %}
-          <a class="btn btn-default btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
+          <a class="btn btn-outline-dark btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
               <span class="fa fa-edit" aria-hidden="true"></span>
               Editer
           </a>
